--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/07/2020 03:59:00 PM</p>
+    <p class="lastupdate">09/07/2020 04:04:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">112.6&#176;F</td>
+        <td class="data">112.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">112.6&#176;F</td>
+        <td class="data">112.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">112.6&#176;F</td>
+        <td class="data">112.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">47.9&#176;F</td>
+        <td class="data">49.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">12%</td>
+        <td class="data">13%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.663 inHg (-0.081)</td>
+        <td class="data">29.662 inHg (-0.074)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph S (180&#176;)</td>
+        <td class="data">2 mph SSE (158&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">89.1&#176;F</td>
+        <td class="data">89.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -305,32 +305,32 @@
         <td class="data new_row hilo_day">
           <span title="12:09:01 AM">
             29.836</span><br/>
-          <span title="03:51:02 PM">
-            29.663</span>
+          <span title="04:02:02 PM">
+            29.660</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:59:02 AM (Sunday)">
             29.954</span><br/>
-          <span title="03:51:02 PM (Monday)">
-            29.663</span>
+          <span title="04:02:02 PM (Monday)">
+            29.660</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
             30.063</span><br/>
-          <span title="09/07/2020 03:51:02 PM">
-            29.663</span>
+          <span title="09/07/2020 04:02:02 PM">
+            29.660</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="07/04/2020 08:07:00 AM">
             30.065</span><br/>
-          <span title="09/07/2020 03:51:02 PM">
-            29.663</span>
+          <span title="09/07/2020 04:02:02 PM">
+            29.660</span>
         </td>
         <td class="data new_row hilo_rainyear">
           <span title="07/04/2020 08:07:00 AM">
             30.065</span><br/>
-          <span title="09/07/2020 03:51:02 PM">
-            29.663</span>
+          <span title="09/07/2020 04:02:02 PM">
+            29.660</span>
         </td>
         <td class="units"> inHg</td>
       </tr>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           1<br/>
-          18
+          19
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="03:57:02 PM">
-            89.1</span><br/>
+          <span title="04:03:02 PM">
+            89.3</span><br/>
           <span title="07:35:01 AM">
             78.3</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">6 days, 1 hour, 12 minutes</td>
+      <td class="data">6 days, 1 hour, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">6 days, 1 hour, 12 minutes</td>
+      <td class="data">6 days, 1 hour, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
