--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/07/2020 04:04:00 PM</p>
+    <p class="lastupdate">09/07/2020 04:09:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">112.0&#176;F</td>
+        <td class="data">111.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">112.0&#176;F</td>
+        <td class="data">111.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">112.0&#176;F</td>
+        <td class="data">111.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">49.5&#176;F</td>
+        <td class="data">49.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.662 inHg (-0.074)</td>
+        <td class="data">29.656 inHg (-0.076)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph SSE (158&#176;)</td>
+        <td class="data">1 mph SE (135&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">89.3&#176;F</td>
+        <td class="data">89.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -305,32 +305,32 @@
         <td class="data new_row hilo_day">
           <span title="12:09:01 AM">
             29.836</span><br/>
-          <span title="04:02:02 PM">
-            29.660</span>
+          <span title="04:07:02 PM">
+            29.656</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:59:02 AM (Sunday)">
             29.954</span><br/>
-          <span title="04:02:02 PM (Monday)">
-            29.660</span>
+          <span title="04:07:02 PM (Monday)">
+            29.656</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
             30.063</span><br/>
-          <span title="09/07/2020 04:02:02 PM">
-            29.660</span>
+          <span title="09/07/2020 04:07:02 PM">
+            29.656</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="07/04/2020 08:07:00 AM">
             30.065</span><br/>
-          <span title="09/07/2020 04:02:02 PM">
-            29.660</span>
+          <span title="09/07/2020 04:07:02 PM">
+            29.656</span>
         </td>
         <td class="data new_row hilo_rainyear">
           <span title="07/04/2020 08:07:00 AM">
             30.065</span><br/>
-          <span title="09/07/2020 04:02:02 PM">
-            29.660</span>
+          <span title="09/07/2020 04:07:02 PM">
+            29.656</span>
         </td>
         <td class="units"> inHg</td>
       </tr>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="04:03:02 PM">
-            89.3</span><br/>
+          <span title="04:07:02 PM">
+            89.5</span><br/>
           <span title="07:35:01 AM">
             78.3</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">100%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">6 days, 1 hour, 17 minutes</td>
+      <td class="data">6 days, 1 hour, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">6 days, 1 hour, 17 minutes</td>
+      <td class="data">6 days, 1 hour, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
