--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/07/2020 04:29:00 PM</p>
+    <p class="lastupdate">09/07/2020 04:34:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">108.3&#176;F</td>
+        <td class="data">108.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">108.3&#176;F</td>
+        <td class="data">108.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">108.3&#176;F</td>
+        <td class="data">108.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">46.7&#176;F</td>
+        <td class="data">46.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.647 inHg (-0.080)</td>
+        <td class="data">29.647 inHg (-0.076)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">8 mph SW (225&#176;)</td>
+        <td class="data">7 mph S (180&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">90.0&#176;F</td>
+        <td class="data">90.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -237,8 +237,8 @@
         <td class="data new_row hilo_day">
           <span title="11:23:38 AM">
             58.4</span><br/>
-          <span title="04:28:44 PM">
-            46.7</span>
+          <span title="04:30:06 PM">
+            46.5</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="11:23:38 AM (Monday)">
@@ -375,14 +375,14 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="04:26:50 PM">
-            13</span><br/>
-          209
+          <span title="04:31:00 PM">
+            15</span><br/>
+          180
         </td>
         <td class="data new_row hilo_week">
-          <span title="04:26:50 PM (Monday)">
-            13</span><br/>
-          209
+          <span title="04:31:00 PM (Monday)">
+            15</span><br/>
+          180
         </td>
         <td class="data new_row hilo_month">
           <span title="09/01/2020 01:02:40 PM">
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="04:26:02 PM">
-            90.0</span><br/>
+          <span title="04:33:02 PM">
+            90.2</span><br/>
           <span title="07:35:01 AM">
             78.3</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">6 days, 1 hour, 42 minutes</td>
+      <td class="data">6 days, 1 hour, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">6 days, 1 hour, 42 minutes</td>
+      <td class="data">6 days, 1 hour, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
