--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/07/2020 04:34:00 PM</p>
+    <p class="lastupdate">09/07/2020 04:39:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">108.2&#176;F</td>
+        <td class="data">108.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">108.2&#176;F</td>
+        <td class="data">108.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">108.2&#176;F</td>
+        <td class="data">108.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">46.6&#176;F</td>
+        <td class="data">46.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.647 inHg (-0.076)</td>
+        <td class="data">29.645 inHg (-0.080)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">7 mph S (180&#176;)</td>
+        <td class="data">10 mph SW (225&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">90.2&#176;F</td>
+        <td class="data">90.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           1<br/>
-          20
+          19
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="04:33:02 PM">
-            90.2</span><br/>
+          <span title="04:37:02 PM">
+            90.3</span><br/>
           <span title="07:35:01 AM">
             78.3</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">6 days, 1 hour, 47 minutes</td>
+      <td class="data">6 days, 1 hour, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">6 days, 1 hour, 47 minutes</td>
+      <td class="data">6 days, 1 hour, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
