--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/07/2020 04:44:00 PM</p>
+    <p class="lastupdate">09/07/2020 04:49:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">107.9&#176;F</td>
+        <td class="data">108.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">107.9&#176;F</td>
+        <td class="data">108.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">107.9&#176;F</td>
+        <td class="data">108.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">46.4&#176;F</td>
+        <td class="data">44.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">13%</td>
+        <td class="data">12%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.644 inHg (-0.079)</td>
+        <td class="data">29.644 inHg (-0.078)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">7 mph SSW (202&#176;)</td>
+        <td class="data">6 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">90.4&#176;F</td>
+        <td class="data">90.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -237,8 +237,8 @@
         <td class="data new_row hilo_day">
           <span title="11:23:38 AM">
             58.4</span><br/>
-          <span title="04:41:44 PM">
-            46.3</span>
+          <span title="04:46:42 PM">
+            44.4</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="11:23:38 AM (Monday)">
@@ -305,32 +305,32 @@
         <td class="data new_row hilo_day">
           <span title="12:09:01 AM">
             29.836</span><br/>
-          <span title="04:42:02 PM">
-            29.644</span>
+          <span title="04:45:02 PM">
+            29.641</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:59:02 AM (Sunday)">
             29.954</span><br/>
-          <span title="04:42:02 PM (Monday)">
-            29.644</span>
+          <span title="04:45:02 PM (Monday)">
+            29.641</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
             30.063</span><br/>
-          <span title="09/07/2020 04:42:02 PM">
-            29.644</span>
+          <span title="09/07/2020 04:45:02 PM">
+            29.641</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="07/04/2020 08:07:00 AM">
             30.065</span><br/>
-          <span title="09/07/2020 04:42:02 PM">
-            29.644</span>
+          <span title="09/07/2020 04:45:02 PM">
+            29.641</span>
         </td>
         <td class="data new_row hilo_rainyear">
           <span title="07/04/2020 08:07:00 AM">
             30.065</span><br/>
-          <span title="09/07/2020 04:42:02 PM">
-            29.644</span>
+          <span title="09/07/2020 04:45:02 PM">
+            29.641</span>
         </td>
         <td class="units"> inHg</td>
       </tr>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           1<br/>
-          19
+          18
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -448,7 +448,7 @@
         </td>
         <td class="data new_row hilo_month">
           1<br/>
-          3
+          2
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="04:41:02 PM">
-            90.4</span><br/>
+          <span title="04:44:02 PM">
+            90.5</span><br/>
           <span title="07:35:01 AM">
             78.3</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">94%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">6 days, 1 hour, 57 minutes</td>
+      <td class="data">6 days, 2 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">6 days, 1 hour, 57 minutes</td>
+      <td class="data">6 days, 2 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
