--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/07/2020 05:09:00 PM</p>
+    <p class="lastupdate">09/07/2020 05:14:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">107.8&#176;F</td>
+        <td class="data">107.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">107.8&#176;F</td>
+        <td class="data">107.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">107.8&#176;F</td>
+        <td class="data">107.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">46.3&#176;F</td>
+        <td class="data">44.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">13%</td>
+        <td class="data">12%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.639 inHg (-0.076)</td>
+        <td class="data">29.637 inHg (-0.076)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">5 mph SSW (202&#176;)</td>
+        <td class="data">7 mph SW (225&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -407,7 +407,7 @@
       <tr>
         <td class="label">Wind Average</td>
         <td class="data new_row hilo_day">
-          1</td>
+          2</td>
         <td class="data new_row hilo_week">
           1</td>
         <td class="data new_row hilo_month">
@@ -421,7 +421,7 @@
       <tr>
         <td class="label">Wind RMS</td>
         <td class="data new_row hilo_day">
-          2</td>
+          3</td>
         <td class="data new_row hilo_week">
           2</td>
         <td class="data new_row hilo_month">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          18
+          17
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">100%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">6 days, 2 hours, 22 minutes</td>
+      <td class="data">6 days, 2 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">6 days, 2 hours, 22 minutes</td>
+      <td class="data">6 days, 2 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
